@@ -6,6 +6,7 @@ acl 7.x-1.x-dev:
   Enhancements:
     - #968382: Install better indexes.
   Bug fixes:
+    - Fix indenting, spacing, comments; remove useless helper functions. No functional changes.
     - #1024114: Fix query in acl_get_id_by_name().
 
 
